add profile and feedback api methods
